--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 
 *{
     padding: 0;
@@ -22,7 +22,7 @@ header{
     background-color: #1E1E1E;
     box-shadow: 0 8px 32px rgba(0, 0, 0, 0.5);
     position: fixed;
-    z-index: 2;
+    z-index: 100;
     height: 4.5rem;
     padding: 0 5rem 0rem 4rem;
 }
@@ -254,6 +254,7 @@ main{
     width: 90%;
     margin: auto;
     margin-top: 3rem;
+    margin-bottom: 4rem;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -262,9 +263,15 @@ main{
     padding: .5rem;
 }
 
+.course-Category h1, .whyChooseSection h1{
+    font-size: 2.5rem;
+    margin: 2rem 0;
+}
+
 .course-Container{
     width: 100%;
     position: relative;
+    margin-bottom: 4%;
 }
 
 .courses-Tab{
@@ -464,7 +471,6 @@ main{
     left: -.2rem;
 }
 
-
 .course-arrow-btn i{
     color: rgb(68, 68, 68);
 }
@@ -477,7 +483,205 @@ main{
     left: -.9rem;
 }
 
+/* Why choose us section */
+.whyChooseSection{
+    height: fit-content;
+    margin: auto;
+    width: 90%;
+    padding: .7rem;
+}
 
+.whyChooseUs{
+    position: relative;
+    height: fit-content;
+}
+
+.whyChooseUsCards{
+    height: 40rem;
+    position: absolute;
+    top: 0;
+    transition: width .5s linear;
+    display: flex;
+    flex-direction: column;
+    padding: 3rem;
+    gap: .5rem;
+    cursor: pointer;
+}
+
+.WCUC{
+    box-shadow: 1px 0px 9px 2px rgb(32, 32, 32);
+}
+
+.chooseCard4{
+    background-color: rgb(127, 126, 126);
+    z-index: 4;
+    width: 55%;
+    min-width: 22%;
+    color: rgb(28, 28, 28);
+}
+
+.chooseCard3{
+    min-width: 42%;
+    background-color: rgb(82, 82, 82);
+    width: 70%;
+    z-index: 3;
+    color: rgb(218, 218, 218);
+}
+
+.chooseCard2{
+    width: 83%;
+    min-width: 61%;
+    background-color: rgb(45, 43, 43);
+    z-index: 2;
+    color: rgb(0, 0, 0);
+}
+
+.chooseCard1{
+    width: 100%;
+    z-index: 1;
+    background-color: black;
+    color: beige;
+}
+
+.whyChooseUsCards:nth-child(+n+2){
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+}
+
+.cardPageNo{
+    font-family: "Anton", sans-serif;
+    font-size: 6rem;
+    position: absolute;
+    bottom: 2rem;
+    right: 3rem;
+}
+
+.cardReason{
+    font-size: 2.1rem;
+    color: rgb(39, 39, 39);
+    font-weight: 700;
+    text-shadow: 5px 5px 10px rgb(69, 69, 69);
+}
+
+.cardDetails{
+    padding-left: .1rem;
+    font-size: 1.2rem;
+    text-shadow: 5px 5px 10px rgb(49, 49, 49);
+    width: 90%;
+    opacity: 0;
+}
+
+.cardQuotes{
+    font-size: 8rem;
+    text-align: start;
+    position: absolute;
+    bottom: 3rem;
+    opacity: 0;
+}
+
+.chooseCard3 .cardReason{
+    color: beige;
+}
+
+.chooseCard3 .cardReason{
+    padding-left: 60%;
+    color: #dadada;
+}
+
+.chooseCard2 .cardReason{
+    padding-left: 75%;
+    color: rgb(0, 0, 0);
+}
+
+.chooseCard1 .cardReason{
+    padding-left: 68%;
+    color: beige;
+}
+
+.chooseCard3 .cardDetails{
+    padding-left: 34%;
+    color: rgb(152, 152, 152);
+}
+
+.chooseCard2 .cardDetails{
+    padding-left: 55%;
+    color: rgb(0, 0, 0);
+}
+
+.chooseCard1 .cardDetails{
+    padding-left: 68%;
+}
+
+.chooseCard3 .cardQuotes{
+    padding-left: 30%;
+}
+
+.chooseCard2 .cardQuotes{
+    padding-left: 50%;
+}
+
+.chooseCard1 .cardQuotes{
+    padding-left: 62%;
+    z-index: 100;
+    width: 90%;
+}
+
+.chooseCard1 .cardQuotes cite{
+    color: rgb(71, 71, 71);
+}
+
+#coursesId{
+    scroll-behavior: smooth;
+}
+
+.chooseCard2 .cardQuotes cite{
+    color: rgb(98, 98, 98);
+}
+
+.chooseCard2 .cardQuotes blockquote{
+    color: rgb(119, 119, 119);
+}
+
+.cardQuotes cite{
+    margin-top: 1.5rem;
+}
+
+/* Quote Text Animation */
+@keyframes fadeQuote {
+    0%{
+        opacity: 0;
+        transform: translateX(-20px);
+    }
+    100%{
+        opacity: 1;
+        transform: translateX(0px);
+    }
+}
+
+.textFadeIn{
+    opacity: 0;
+    transform: translateX(0px);
+    animation: fadeQuote .7s linear forwards 1;
+    transition: transform .6s linear, opacity .6s linear;
+}
+
+blockquote {
+    font-size: 1.2rem;
+    font-style: italic;
+    border-left: 5px solid;
+    padding: 10px 20px;
+    margin: 20px 0;
+    color: #333;
+    width: 80%;
+}
+  
+cite {
+    display: block;
+    text-align: right;
+    font-weight: bold;
+    color: #333;
+}
+  
 
 /* Footer Section */
 
@@ -505,7 +709,7 @@ main{
     height: 2px;
     background-color: rgb(49, 49, 49);
     width: 90%;
-    margin: auto;
+    margin: 5rem auto 4rem auto;
 }
 
 .tabActive{
