--- a/styles.css
+++ b/styles.css
@@ -9,10 +9,11 @@
     font-family: "Poppins", serif;
 }
 
-body, html{
-    height: 100%;
-    width: 100%;
+body, html, .Main-Container{
+    height: 100vh;
+    width: 100vw;
     background-color: #121212;
+    overflow-x: hidden;
 }
 
 header{
@@ -152,7 +153,7 @@ header{
 .sidebar{
     background-color: #1E1E1E;
     width: 32vw;
-    min-width: 17rem;
+    /* min-width: 17rem; */
     height: 100vh;
     position: absolute;
     right: -350px;
@@ -160,6 +161,7 @@ header{
     padding: 1rem;
     transition: right .4s linear;
     /* color: #303141; for light mode  */
+    /* display: none; */
 }
 
 .sidebar ul{
@@ -485,21 +487,18 @@ main{
 
 /* Why choose us section */
 .whyChooseSection{
-    height: fit-content;
+    position: relative;
+    height: 50rem;
     margin: auto;
     width: 90%;
     padding: .7rem;
-}
-
-.whyChooseUs{
-    position: relative;
-    height: fit-content;
+    margin-bottom: 9rem;
 }
 
 .whyChooseUsCards{
-    height: 40rem;
+    height: 88%;
     position: absolute;
-    top: 0;
+    top: 9rem;
     transition: width .5s linear;
     display: flex;
     flex-direction: column;
@@ -681,15 +680,270 @@ cite {
     font-weight: bold;
     color: #333;
 }
-  
+
+
+/* Plans section */
+.plans-Container{
+    width: 90%;
+    margin: auto;
+    padding: 1rem;
+}
+
+.allPlans{
+    display: flex;
+    gap: 1rem;
+}
+
+.plans:hover{
+    filter: grayscale(.8)
+}
+
+.plans{
+    flex: 1;
+    background-color: #1d1d2f;
+    padding: 1.5rem 1rem 3rem;
+    border-top: 10px solid var(--bg-color);
+    border-radius: 9px;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    min-width: 270px;
+    cursor: pointer;
+}
+
+.plans-Section{
+    margin-bottom: 3rem;
+}
+
+.plans-Section span{
+    color: var(--secondary-text);
+}
+
+.planHeading{
+    padding-bottom: 1rem;
+    border-bottom: 2px solid gray;
+    margin-bottom: 1.5rem;
+    position: relative;
+}
+
+.plan1 .arrowDown{
+    transform: rotate(180deg);
+}
+
+.arrowDown{
+    position: absolute;
+    right: 1rem;
+    top: 1rem;
+    transition: transform .3s linear;
+}
+
+.arrowDown i{
+    font-size: large;
+}
+
+.planHeading p{
+    font-size: 2rem;
+}
+
+.planHeading span{
+    font-size: .8rem;
+    color: #aaaaaa;
+}
+
+.planDetails{
+    margin-bottom: 1rem;
+}
+
+.planDetails li{
+    list-style: none;
+    font-size: .8rem;
+    margin-bottom: .5rem;
+}
+
+.planBottom{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.getPlanBtn{
+    border: none;
+    width: 100%;
+    padding: .7rem;
+    font-size: 1.1rem;
+    letter-spacing: 1px;
+    font-weight: 600;
+    color: whitesmoke;
+    background-color: var(--bg-color);
+    border-radius: 5px;
+}
+
+.planBottom p{
+    font-size: large;
+    color: rgb(209, 208, 208);
+    font-weight: 800;
+}
+
+.plan1 .planBottom{
+    display: flex;
+}
+
+.planIcon{
+    padding-top: .3rem;
+}
+
+.fa-user{
+    margin-right: .3rem;
+}
+
+/* Reviews Section */
+.reviewCardContainer{
+    width: 90%;
+    padding: 1rem;
+    margin: auto;
+}
+
+.reviewContainer{
+    display: grid;
+    gap: 2.5%;
+    row-gap: 2rem;
+    grid-template-columns: repeat(auto-fill, minmax(15%, 18rem));
+}
+
+.reviewCards{
+    border: 1px solid rgb(45, 44, 44);
+    padding: 1.6rem;
+    color: rgb(148, 148, 148);
+    min-height: 18rem;
+    text-align: justify;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    box-shadow: 0px 0px 20px 5px rgb(0, 0, 0);
+    background-color: #222222;
+    cursor: pointer;
+}
+
+.reviewTitle{
+    margin-bottom: 2rem;
+}
+
+.reviewCardTop{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    height: 70%;
+    margin-bottom: 1rem;
+}
+
+.cardReviewBottom{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.cardReviewBottom span{
+    background-color: rgb(148, 148, 148);
+    border-radius: 50%;
+    color: black;
+    font-weight: 900;
+    padding: .3rem;
+}
+
+.reviewCards:hover{
+    border: 1px solid rgb(78, 78, 78);
+}
+
+/* FAQ Section */
+.FAQSection{
+    margin: auto;
+    width: 85%;
+    padding: 1rem;
+}
+
+.FAQHeading{
+    margin-bottom: 1.5rem;
+}
+
+.FAQBody{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: .7rem;
+}
+
+.FAQS{
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: .1rem;
+    position: relative;
+}
+
+.FAQQuestion, .FAQAnswer{
+    transition: background-color .3s ease;
+    background-color: #2d2d2d;
+    padding: 1.3rem 1.5rem;
+}
+
+.FAQQuestion span{
+    font-size: 1.5rem;
+}
+
+.FAQQuestion i{
+    font-size: 1.5rem;
+    position: absolute;
+    right: 2rem;
+}
+
+.FAQAnswer{
+    font-size: 1.3rem;
+    color: rgb(199, 199, 199);  
+    padding: 0 1.5rem;
+    max-height: 0px;
+    overflow: hidden;
+    transition: max-height 0.3s ease-out, padding 0.3s ease-out;
+    /* transition: max-height 0.3s ease-out, padding 0.3s ease-out; */
+}
+
+.FAQQuestion:hover{
+    background-color: #414141;
+}
+
+.FAQS.activeFAQ .FAQAnswer{
+    max-height: fit-content;
+    padding: 1.3rem 1.5rem;
+}
+
+.FAQS.activeFAQ .fa-plus{
+    transform: rotate(45deg);
+}
 
 /* Footer Section */
 
 
 /* Media Quiries */
-@media screen and (max-width: 1000px) {
-    /* Header */
-    
+@media (max-width: 1100px) {
+    /* For paument section */
+    .plans-Container{
+        width: 100%;
+    }
+    .allPlans{
+        flex-direction: column;
+    }
+    .planHeading{
+        display: flex;
+        align-items: flex-end;
+        gap: 3%;
+        border-bottom: none;
+    }
+    .planBottom{
+        display: none;
+    }
+    .plans{
+        padding-bottom: 0;
+    } 
+    /* Till */
 }
 
 /* Extra Classes */
@@ -715,4 +969,8 @@ cite {
 .tabActive{
     background-color: #fff;
     color: black;
+}
+
+.showingPlan{
+    padding-bottom: 2rem;
 }
